Added another puzzle, a bulls and cows style puzzle, with some primes.

--- a/DragonMaze.ipynb
+++ b/DragonMaze.ipynb
@@ -5,7 +5,7 @@
    "id": "eba12afa",
    "metadata": {},
    "source": [
-    "# Dragon Maze from u/SunsetLightMountain"
+    "# Dragon Maze Magic Word Square from u/SunsetLightMountain"
    ]
   },
   {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d649b6e1",
    "metadata": {},
    "outputs": [],
@@ -36,10 +36,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4501924c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "370104"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#r = requests.get(\"https://www.mit.edu/~ecprice/wordlist.10000\")\n",
     "r = requests.get(\"https://raw.githubusercontent.com/dwyl/english-words/master/words_alpha.txt\")\n",
@@ -49,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "f5217284",
    "metadata": {},
    "outputs": [],
@@ -59,10 +70,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "05cf8b6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15920"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "wordlist = [w for w in wordlist if len(w)==grid_size]\n",
     "len(wordlist)"
@@ -78,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a33e832b",
    "metadata": {},
    "outputs": [],
@@ -88,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b5a342f3",
    "metadata": {},
    "outputs": [],
@@ -98,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "de86262b",
    "metadata": {},
    "outputs": [],
@@ -116,10 +138,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9fa91135",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "letters = Counter({'a':2,'e':2,'k':1,'m':2,'n':2,'o':4,'p':2,'r':4,'s':3,'t':3})\n",
     "sum(letters.values())"
@@ -143,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "728fb987",
    "metadata": {},
    "outputs": [],
@@ -183,10 +216,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a829db22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['tramp', 'rotor', 'atone', 'monks', 'press']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result = rec(0, letters.copy(), [])\n",
     "result"
@@ -202,13 +246,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "0a6e719f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tramp\n",
+      "rotor\n",
+      "atone\n",
+      "monks\n",
+      "press\n"
+     ]
+    }
+   ],
    "source": [
     "for w in result:\n",
-    "    print(' '.join(w))"
+    "    print(''.join(w))"
    ]
   },
   {
@@ -221,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "3adc2921",
    "metadata": {},
    "outputs": [],
@@ -252,10 +308,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "39b7c0cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['tramp', 'rotor', 'atone', 'monks', 'press']]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "result = all_rec(0, letters.copy(), [])\n",
     "result"
