Added alternative interpretation solution to Find The Code Prime puzzle

--- a/FindTheCodePrimes.ipynb
+++ b/FindTheCodePrimes.ipynb
@@ -106,7 +106,7 @@
     "        candidate = [i//10**(n-1-j)%10 for j in range(n)]\n",
     "        solved = True\n",
     "        for guess,report in clues:\n",
-    "            cc = Counter([i for i,j in zip(candidate,guess) if i==j])\n",
+    "            cc = Counter([c for c,g in zip(candidate,guess) if c==g])\n",
     "            cw = (Counter(guess) & Counter(candidate)) - cc\n",
     "            if (len(cc),len(cw)) != report:\n",
     "                solved = False\n",
@@ -129,9 +129,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a59431c",
+   "metadata": {},
+   "source": [
+    "### Alternate Interpretation\n",
+    "\n",
+    "I interpreted each digit in the guess as pairing with a single digit of the solutions. i.e. 2 guess digits cannot map to the same solution digit, even if the 2 guess digits are the same.\n",
+    "\n",
+    "u/menishh had a different interpretation: each digit in the guess has its cc and cw independently."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53717ce6",
+   "id": "93629620",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solutions = []\n",
+    "n = 4\n",
+    "for p in p_candidates:\n",
+    "    x = p//100%10\n",
+    "    y = p//10%10\n",
+    "    clues = [\n",
+    "        ((3,x,4,7), (0,2)),\n",
+    "        ((5,3,9,9), (1,1)),\n",
+    "        ((8,8,3,y), (0,1)),\n",
+    "        ((7,x,y,3), (1,1)),\n",
+    "        ((1,6,6,2), (0,1)),\n",
+    "        ((1,5,7,1), (1,0)),\n",
+    "    ]\n",
+    "    for i in range(10**n):\n",
+    "        candidate = [i//10**(n-1-j)%10 for j in range(n)]\n",
+    "        solved = True\n",
+    "        for guess,report in clues:\n",
+    "            cc = sum([c==g for c,g in zip(candidate,guess)])\n",
+    "            cw = sum([g in candidate for g in guess]) - cc\n",
+    "            if (cc,cw) != report:\n",
+    "                solved = False\n",
+    "                break\n",
+    "        if solved:\n",
+    "            solutions.append((candidate, x, y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f0ff2a67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for code,x,y in solutions:\n",
+    "    print(f\"Code solution: {''.join(map(str,code))}\")\n",
+    "    print(f\"X: {x}, Y: {y}, X+Y={x+y}, prime: 7{x}{y}3\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38f631b0",
    "metadata": {},
    "outputs": [],
    "source": []
