Updated ModifiedHamiltonianPathPuzzle to include search for additional constraints to ensure uniqueness.

--- a/ModifiedHamiltonianPathPuzzle.ipynb
+++ b/ModifiedHamiltonianPathPuzzle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "64caffd4",
+   "id": "a158d6a4",
    "metadata": {},
    "source": [
     "# Modified Hamiltonian Path Puzzle\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be5ce5f2",
+   "id": "29351e0c",
    "metadata": {},
    "source": [
     "# Problem Setup\n",
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab9bc47f",
+   "id": "994de1ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "480f757c",
+   "id": "f419294d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f85c34a",
+   "id": "14385f93",
    "metadata": {},
    "source": [
     "Define edges of the complete lattice grid."
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5735605",
+   "id": "a1303aab",
    "metadata": {
     "scrolled": true
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faf64c73",
+   "id": "1c3e5cb1",
    "metadata": {},
    "source": [
     "Remove the blocked edges from the graph."
@@ -91,11 +91,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd5cd9bc",
+   "id": "8746c591",
    "metadata": {},
    "outputs": [],
    "source": [
     "blocked = [((2,4), (3,4)), ((5,4), (6,4))]\n",
+    "#blocked += [((2,2), (2,3)), ((6,5), (6,6))] # savethedonut's unique additional constraints\n",
     "\n",
     "for (k,kp) in blocked:\n",
     "    edgelist[k].remove(kp)\n",
@@ -104,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac34ea97",
+   "id": "20899487",
    "metadata": {},
    "source": [
     "Define the solver and the variables: integers for each node representing its position on the Hamiltonian path."
@@ -113,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbae533b",
+   "id": "9b423ca2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8c5a873",
+   "id": "c47588a9",
    "metadata": {},
    "source": [
     "### Constraints"
@@ -132,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab514d2c",
+   "id": "39988e79",
    "metadata": {},
    "source": [
     "- Fix the start and end's value, then fill in the remaining nodes successor edges as the OR constrains."
@@ -141,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ddb2afa",
+   "id": "bb7d1a42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70c54e14",
+   "id": "370f147d",
    "metadata": {},
    "source": [
     "- We have 2 edges that must be used, so add those mandatory constraints. Remember either direction is valid"
@@ -170,12 +171,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afd17983",
+   "id": "75cbc742",
    "metadata": {},
    "outputs": [],
    "source": [
     "# required\n",
     "required = [((4,0), (4,1)), ((4,7), (4,8))]\n",
+    "#required += [((1,4), (1,5)), ((3,3), (3,4)), ((5,4), (5,5)), ((7,3), (7,4))] # savethedonut's unique additional constraints\n",
     "\n",
     "for (k,kp) in required:\n",
     "    solver.add(z3.Or([cv[kp]==cv[k]+1, cv[k]==cv[kp]+1]))\n",
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b3af944",
+   "id": "60442c08",
    "metadata": {},
    "source": [
     "- Add in the rotational symmetry constraint"
@@ -193,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27fa1c33",
+   "id": "dab0458d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99c437c8",
+   "id": "6aba4d09",
    "metadata": {},
    "source": [
     "- Add the no 3x3 S shape constraint"
@@ -215,7 +217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9aaeee5",
+   "id": "be524a36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d2271d1",
+   "id": "473028a3",
    "metadata": {},
    "source": [
     "- Add no 4 in a row constraint"
@@ -254,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3ec8c6a",
+   "id": "05cdc017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +279,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2fba977",
+   "id": "9aeae3c1",
    "metadata": {},
    "source": [
     "## Solving"
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f39c912",
+   "id": "464e85a6",
    "metadata": {},
    "source": [
     "Perform the solve"
@@ -294,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6efc4a31",
+   "id": "13ba84c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f92370b7",
+   "id": "4d094f4e",
    "metadata": {
     "scrolled": true
    },
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65d52028",
+   "id": "9a6d7048",
    "metadata": {},
    "source": [
     "Extract the path from the solution"
@@ -324,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4945afea",
+   "id": "c1f5530c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c8a0ee7",
+   "id": "3ede4972",
    "metadata": {
     "scrolled": true
    },
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b6d8911",
+   "id": "feee21d6",
    "metadata": {},
    "source": [
     "### Find all solutions"
@@ -360,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8de7cad5",
+   "id": "87d3419e",
    "metadata": {
     "scrolled": true
    },
@@ -377,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8f951d1",
+   "id": "5e650d11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,8 +387,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "09d003b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = solutions[0]\n",
+    "path = extract_path(model)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "e8b00014",
+   "id": "6acfff61",
    "metadata": {},
    "source": [
     "## Visualization"
@@ -395,7 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a038b49",
+   "id": "55e1d970",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bae92fc8",
+   "id": "50b60235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bfbb140",
+   "id": "500e0b3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,6 +443,9 @@
     "for k,kp in zip(path[:-1], path[1:]):\n",
     "    G.add_edge(k, kp)\n",
     "\n",
+    "#for k,kp in required:\n",
+    "#    G.add_edge(k, kp)\n",
+    "\n",
     "# positions \n",
     "pos_dict = {k: tuple(reversed(k)) for k in edgelist.keys()}"
    ]
@@ -437,12 +453,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af337e56",
+   "id": "e82241c1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Draw the graph\n",
-    "#nx.draw(G, pos=pos_dict, with_labels=True, node_size=500, node_color='lightblue', font_size=10, font_weight='bold')\n",
+    "#nx.draw(G, pos=pos_dict, with_labels=True, node_size=500, node_color='lightblue', font_size=10, edge_color='blue')\n",
     "\n",
     "nx.draw(G, pos=pos_dict, node_size=50, node_color='black', edge_color='blue')\n",
     "\n",
@@ -453,12 +469,13 @@
     "    c='r')\n",
     "    \n",
     "plt.gca().set_aspect('equal')\n",
+    "#plt.savefig(f'ModifiedHamiltonianPath_Unqiue_Solution_puzzle_eg.png')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "31ec0340",
+   "id": "ae023722",
    "metadata": {},
    "source": [
     "### Graph all solutions"
@@ -467,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9312021",
+   "id": "411bb1bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,14 +511,386 @@
     "        c='r')\n",
     "\n",
     "    plt.gca().set_aspect('equal')\n",
-    "    plt.savefig(f'ModifiedHamiltonanPath_Solution_{i_sol+1}.png')\n",
+    "    #plt.savefig(f'ModifiedHamiltonianPath_Solution_{i_sol+1}.png')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e0113e9",
+   "metadata": {},
+   "source": [
+    "## Constraining to uniqueness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b575711",
+   "metadata": {},
+   "source": [
+    "What is the minimum number of additional constraints required for uniqueness?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e2dbb55",
+   "id": "f1542c0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths = list(map(extract_path, solutions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b645830",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths_edges = [list(zip(path[:-1],path[1:])) for path in paths]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e67f8274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Any edges unique to the solution?\n",
+    "op_solution = 13\n",
+    "any_other_shared = set([edge for ipath, path in enumerate(paths_edges) for edge in path if ipath != op_solution])\n",
+    "unique_edges = set(paths_edges[op_solution]) - any_other_shared\n",
+    "unique_edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9497f1ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functools\n",
+    "import operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39d71a2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Any edges only not present in the solution?\n",
+    "all_other_shared = set(functools.reduce(operator.and_, [set(path) for ipath, path in enumerate(paths_edges) if ipath != op_solution])) \n",
+    "all_other_shared - set(paths_edges[op_solution])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ddce9de",
+   "metadata": {},
+   "source": [
+    "### Combinatorial search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dae0fed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def norm_edge(edge):\n",
+    "    return tuple(sorted(edge))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec8bfbdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_undirected_edges = set([norm_edge((k,kv)) for k,v in edgelist.items() for kv in v]) # undirected\n",
+    "\n",
+    "paths_edges_sets = [set([norm_edge(edge) for edge in path]) for path in paths_edges]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "079a1a33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b77eb540",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def I(edge):\n",
+    "    return norm_edge(edge)\n",
+    "def mirrorH(edge):\n",
+    "    (i,j),(ip,jp) = edge\n",
+    "    return norm_edge(((i,size-1-j),(ip,size-1-jp)))\n",
+    "def mirrorV(edge):\n",
+    "    (i,j),(ip,jp) = edge\n",
+    "    return norm_edge(((size-1-i,j),(size-1-ip,jp)))\n",
+    "def rot180(edge):\n",
+    "    return mirrorH(mirrorV(edge))\n",
+    "\n",
+    "symmetries = [I, mirrorH, mirrorV, rot180]\n",
+    "#symmetries = [I, rot180]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0b3b2c2",
+   "metadata": {},
+   "source": [
+    "### Direct search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb92379e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "paths_edges_sets = [set([norm_edge(edge) for edge in path]) for path in paths_edges]\n",
+    "min_edge_sets = set()\n",
+    "\n",
+    "for n_add in range(len(all_undirected_edges) - len(paths_edges[op_solution])): # there is a must simpler expr in `size`\n",
+    "    print(n_add)\n",
+    "    for edges in itertools.combinations(all_undirected_edges, n_add):\n",
+    "        edges = set(edges)\n",
+    "        # ensure symmetry of constraints\n",
+    "        #if any([f(edge) not in edges for edge in edges for f in symmetries]):\n",
+    "        #    continue\n",
+    "        # add in symmetry manually\n",
+    "        edges = set([f(edge) for edge in edges for f in symmetries])\n",
+    "        edges = tuple(sorted(edges))\n",
+    "        \n",
+    "        # ensure symm edges are same type\n",
+    "        if any([(f(edge) in paths_edges_sets[op_solution]) != (edge in paths_edges_sets[op_solution]) for edge in edges for f in symmetries]):\n",
+    "            continue\n",
+    "        \n",
+    "        filter_set = set(range(len(solutions)))\n",
+    "        \n",
+    "        for edge in edges:\n",
+    "            for isol in list(filter_set):\n",
+    "                if (edge in paths_edges_sets[op_solution]) != (edge in paths_edges_sets[isol]): # must mismatch\n",
+    "                    filter_set.remove(isol)\n",
+    "        if len(filter_set) == 1 and filter_set.pop() == op_solution:\n",
+    "            min_edge_sets.add(edges)\n",
+    "    if min_edge_sets:\n",
+    "        break\n",
+    "min_edge_sets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "883fcd3d",
+   "metadata": {},
+   "source": [
+    "### Symmetry set search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e25a83b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "def gen_sym_sets(op_solution):\n",
+    "    sym_sets = set([\n",
+    "        tuple(sorted(set([f(edge) for f in symmetries])))\n",
+    "        for edge in all_undirected_edges\n",
+    "        if all([\n",
+    "            (f(edge) in paths_edges_sets[op_solution]) == (edge in paths_edges_sets[op_solution])\n",
+    "            for f in symmetries\n",
+    "        ] )\n",
+    "    ])\n",
+    "    return sorted(sym_sets, key=len)\n",
+    "sym_sets = gen_sym_sets(op_solution)\n",
+    "sym_sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08e8a11f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(sym_sets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ef2150a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sym set search\n",
+    "def sym_set_search(sym_sets, op_solution):\n",
+    "    min_edge_sets = []\n",
+    "    for n_add in range(1+len(sym_sets)): # there is a must simpler expr in `size`\n",
+    "        print(f\"Adding {n_add} symmetric constraint sets\")\n",
+    "        for sym_set_picks in itertools.combinations(sym_sets, n_add):\n",
+    "            filter_set = set(range(len(solutions)))\n",
+    "            for sym_set in sym_set_picks:\n",
+    "                for edge in sym_set:\n",
+    "                    for isol in list(filter_set):\n",
+    "                        if (edge in paths_edges_sets[isol]) != (edge in paths_edges_sets[op_solution]): # must mismatch\n",
+    "                            filter_set.remove(isol)\n",
+    "            if len(filter_set) == 1 and filter_set.pop() == op_solution:\n",
+    "                min_edge_sets.append(set(edge for sym_set in sym_set_picks for edge in sym_set))\n",
+    "        if min_edge_sets:\n",
+    "            break\n",
+    "    return min_edge_sets\n",
+    "min_edge_sets = sym_set_search(sym_sets, op_solution)\n",
+    "min_edge_sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c83239c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(solutions)):\n",
+    "    sym_sets = gen_sym_sets(i)\n",
+    "    print(sym_set_search(sym_sets, i))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77a6e68d",
+   "metadata": {},
+   "source": [
+    "### Analysis of new constraint edge sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0afd6118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(min_edge_sets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00347545",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set([len(e) for e in min_edge_sets])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f91fdea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_edge_sets_labelled = [\n",
+    "    {\n",
+    "        'blocked': [edge for edge in edges if edge not in paths_edges_sets[op_solution]], \n",
+    "        'required': [edge for edge in edges if edge in paths_edges_sets[op_solution]]\n",
+    "    } \n",
+    "    for edges in min_edge_sets\n",
+    "]\n",
+    "min_edge_sets_labelled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22a8dc64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only using required edges\n",
+    "len([e for e in min_edge_sets_labelled if not e['blocked']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88189d2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only using blocked edges\n",
+    "len([e for e in min_edge_sets_labelled if not e['required']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca93870e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only using both\n",
+    "len([e for e in min_edge_sets_labelled if e['required'] and e['blocked']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca925afb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# only using both equally\n",
+    "len([e for e in min_edge_sets_labelled if len(e['required']) == len(e['blocked'])])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e699552",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blocked = [((2,4), (3,4)), ((5,4), (6,4))] + [e for e in min_edge_sets_labelled if not e['required']][0]['blocked']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b986d820",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[e for e in min_edge_sets_labelled if len(e['required']) == len(e['blocked'])][0]['blocked']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ea9ad4b",
    "metadata": {},
    "outputs": [],
    "source": []
