Added solution to Queens and Star Battle puzzles

--- a/MathSquarePuzzles.ipynb
+++ b/MathSquarePuzzles.ipynb
@@ -747,7 +747,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b986d44c",
+   "id": "9e4cc342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solutions = []\n",
+    "while solver.check() == z3.sat:\n",
+    "    model = solver.model()\n",
+    "    solution = {k: model.evaluate(v).as_long() for k,v in z3vars.items()}\n",
+    "    solutions.append(solution)\n",
+    "    solver.add(z3.Or(*[v != model.evaluate(v) for v in z3vars.values()]))\n",
+    "    print(f'found {len(solutions)} solutions, latest:', {k: model.evaluate(v).as_long() for k,v in z3vars.items()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8eb5a62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(solutions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "335dfb14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solutions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c720e08b",
    "metadata": {},
    "outputs": [],
    "source": []
