Added 2 new puzzles to the Queens solver

--- a/Queens.ipynb
+++ b/Queens.ipynb
@@ -252,6 +252,8 @@
     "        solver.add(z3.Not(z3.And([ \n",
     "            grid_vars[i][j] == bool(solution[i][j])\n",
     "            for i in range(n) for j in range(n)])))\n",
+    "        if not solve_all:\n",
+    "            break\n",
     "    \n",
     "    if solve_all or not solutions:\n",
     "        return solutions\n",
@@ -1296,9 +1298,297 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "879b88cb",
+   "metadata": {},
+   "source": [
+    "## Example 8: u/Acceptare's from Reddit\n",
+    "\n",
+    "Original post [here](https://www.reddit.com/r/puzzles/comments/1nskecn/crowns_puzzle_i_need_help_and_tips_to_solve_this/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b31f4a5",
+   "metadata": {},
+   "source": [
+    "### Fetch the Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c12a7633",
+   "id": "0c39a8d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdf55c8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://preview.redd.it/crowns-puzzle-i-need-help-and-tips-to-solve-this-puzzle-v0-31w4x6lgovrf1.jpeg?width=1080&crop=smart&auto=webp&s=a4ff8f05c22221c84dda85d0dcf7b4099605f43d\"\n",
+    "puzzle_img = Image.open(io.BytesIO(requests.get(url).content))\n",
+    "puzzle_img.resize((puzzle_img.size[0]//4, puzzle_img.size[1]//4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76dcaef2",
+   "metadata": {},
+   "source": [
+    "### Apply the Transcription"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e64d452c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cropped_img = puzzle_img.crop(np.array(puzzle_img.size * 2) * np.array([0.06, 0.23, 0.94, 0.83]))\n",
+    "cropped_img.resize((cropped_img.size[0]//4, cropped_img.size[1]//4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9733d6db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 14"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "783c1a8f",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "grid, timg = transcribe_grid(cropped_img, n, verbose=True)\n",
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7f0657c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timg.resize((n*32,n*32), Image.NEAREST)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d729571f",
+   "metadata": {},
+   "source": [
+    "### Apply Corrections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10c8fa92",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3381c04c",
+   "metadata": {},
+   "source": [
+    "### Apply to Solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e696f48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solution = complete_solve(grid, l=4, solve_all=True)\n",
+    "len(solution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc6a28b1",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "draw_solution(cropped_img.copy(), solution[0]).resize((cropped_img.size[0]//4, cropped_img.size[1]//4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a16d3b6e",
+   "metadata": {},
+   "source": [
+    "## Example 9: u/Existing-Owl-2355's from Reddit\n",
+    "\n",
+    "Original post [here](https://www.reddit.com/r/puzzles/comments/1nqb3nu/help_solving_queens_game/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f048f957",
+   "metadata": {},
+   "source": [
+    "### Fetch the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c659b8d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd7cc63d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://preview.redd.it/help-solving-queens-game-v0-gu6gnh8w5crf1.png?width=1080&crop=smart&auto=webp&s=2818fdbc5c79bf24d1a179207f17aa2afaf7ee01\"\n",
+    "puzzle_img = Image.open(io.BytesIO(requests.get(url).content))\n",
+    "puzzle_img.resize((puzzle_img.size[0]//4, puzzle_img.size[1]//4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0c28d77d",
+   "metadata": {},
+   "source": [
+    "### Apply the Transcription"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bd897c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cropped_img = puzzle_img.crop(np.array(puzzle_img.size * 2) * np.array([0.07, 0.04, 0.93, 0.96]))\n",
+    "cropped_img.resize((cropped_img.size[0]//4, cropped_img.size[1]//4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4636445a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd9917f4",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "grid, timg = transcribe_grid(cropped_img, n, verbose=True)\n",
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5598e2cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timg.resize((n*32,n*32), Image.NEAREST)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90359887",
+   "metadata": {},
+   "source": [
+    "### Apply Corrections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f38e14ef",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b5894a0",
+   "metadata": {},
+   "source": [
+    "### Apply to Solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3bddd7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solution = complete_solve(grid, solve_all=True)\n",
+    "len(solution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcfbf821",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "draw_solution(cropped_img.copy(), solution[0]).resize((cropped_img.size[0]//4, cropped_img.size[1]//4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93063b8c",
    "metadata": {},
    "outputs": [],
    "source": []
