--- a/Queens.ipynb
+++ b/Queens.ipynb
@@ -1425,7 +1425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution = complete_solve(grid, l=4, solve_all=True)\n",
+    "solution = complete_solve(grid, l=3, solve_all=True)\n",
     "len(solution)"
    ]
   },
@@ -1586,9 +1586,347 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1756cfa1",
+   "metadata": {},
+   "source": [
+    "## Example 10: u/Alive_Ebb6912's from Reddit\n",
+    "\n",
+    "Original post [here](https://www.reddit.com/r/puzzles/comments/1nu54j6/is_this_solvable_without_guessing/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b998e54",
+   "metadata": {},
+   "source": [
+    "### Fetch the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b6ed1b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a63a4ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://preview.redd.it/is-this-solvable-without-guessing-v0-zflpzyhnp8sf1.jpeg?width=1080&crop=smart&auto=webp&s=7d10239cac8a8bc425600c335292191f3525b092\"\n",
+    "puzzle_img = Image.open(io.BytesIO(requests.get(url).content))\n",
+    "puzzle_img.resize((puzzle_img.size[0]//4, puzzle_img.size[1]//4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e516da0f",
+   "metadata": {},
+   "source": [
+    "### Apply the Transcription"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdb4bb2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cropped_img = puzzle_img.crop(np.array(puzzle_img.size * 2) * np.array([0.05, 0.205, 0.95, 0.63]))\n",
+    "cropped_img.resize((cropped_img.size[0]//4, cropped_img.size[1]//4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b47c0e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8288d4b",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "grid, timg = transcribe_grid(cropped_img, n, verbose=True)\n",
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28c796ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timg.resize((n*32,n*32), Image.NEAREST)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1817209e",
+   "metadata": {},
+   "source": [
+    "### Apply Corrections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d136577",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "grid[4][0] = 4\n",
+    "grid[grid > 5] -= 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc2cc00d",
+   "metadata": {},
+   "source": [
+    "### Apply to Solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b27f333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solution = complete_solve(grid, l=1, solve_all=True)\n",
+    "len(solution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c17bf7e",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "draw_solution(cropped_img.copy(), solution[0]).resize((cropped_img.size[0]//4, cropped_img.size[1]//4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eb35661",
+   "metadata": {},
+   "source": [
+    "## Example 11: u/MidknighTrain's from Reddit\n",
+    "\n",
+    "Original post [here](https://www.reddit.com/r/puzzles/comments/1nvvw17/star_battle_puzzle/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5f2cac5",
+   "metadata": {},
+   "source": [
+    "### Fetch the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b327a0f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4c4b36c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://preview.redd.it/star-battle-puzzle-v0-1o0tp3d03nsf1.jpeg?width=1080&crop=smart&auto=webp&s=4da8b26f25bd6bceb8b3920b507c74219a7543e9\"\n",
+    "puzzle_img = Image.open(io.BytesIO(requests.get(url).content))\n",
+    "puzzle_img.resize((puzzle_img.size[0]//4, puzzle_img.size[1]//4))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5bd4792f",
+   "metadata": {},
+   "source": [
+    "### Apply the Transcription"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "55934b73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cropped_img = puzzle_img.crop(np.array(puzzle_img.size * 2) * np.array([0.02, 0.1, 0.98, 1]))\n",
+    "cropped_img.resize((cropped_img.size[0]//4, cropped_img.size[1]//4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04e10d8b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14c642c4",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "grid, timg = transcribe_grid(cropped_img, n, verbose=True)\n",
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e632e35b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timg.resize((n*32,n*32), Image.NEAREST)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b603529",
+   "metadata": {},
+   "source": [
+    "### Apply Corrections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67a8b1a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid[:,9:][grid[:,9:]==1] = grid.max()+1\n",
+    "grid[1,7:] = grid.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "830d06ba",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "grid[:,5:][grid[:,5:]==0] = grid.max()+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2f7ed5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid[:,:4][grid[:,:4]==4] = grid.max()+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5662162",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid[8:,4:][grid[8:,4:]==5] = grid.max()+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24b11aa0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf84158f",
+   "metadata": {},
+   "source": [
+    "### Apply to Solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "845ba147",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solution = complete_solve(grid, l=3, solve_all=True)\n",
+    "len(solution)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "810f4fc5",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "draw_solution(cropped_img.copy(), solution[0]).resize((cropped_img.size[0]//4, cropped_img.size[1]//4))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "93063b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02d99341",
    "metadata": {},
    "outputs": [],
    "source": []
